// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCircle renders with border large 1`] = `
<div
  className="ax-image-circle ax-image-circle--border-large"
  style={
    Object {
      "height": "3rem",
      "width": "3rem",
    }
  }
>
  <div
    className="ax-image-circle__image"
  >
    <img
      className="ax-image ax-space--x4"
      src="/lorem.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`ImageCircle renders with border small 1`] = `
<div
  className="ax-image-circle ax-image-circle--border-small"
  style={
    Object {
      "height": "3rem",
      "width": "3rem",
    }
  }
>
  <div
    className="ax-image-circle__image"
  >
    <img
      className="ax-image ax-space--x4"
      src="/lorem.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`ImageCircle renders with defaultProps 1`] = `
<div
  className="ax-image-circle"
  style={
    Object {
      "height": "3rem",
      "width": "3rem",
    }
  }
>
  <div
    className="ax-image-circle__image"
  >
    <img
      className="ax-image ax-space--x4"
      src="/lorem.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
</div>
`;

exports[`ImageCircle renders with overlay icon 1`] = `
<div
  className="ax-image-circle"
  style={
    Object {
      "height": "3rem",
      "width": "3rem",
    }
  }
>
  <div
    className="ax-image-circle__image"
  >
    <img
      className="ax-image ax-space--x4"
      src="/lorem.jpg"
      style={
        Object {
          "width": "100%",
        }
      }
    />
  </div>
  <div
    className="ax-image-circle__icon"
  >
    <svg
      className="ax-icon ax-icon--twitter"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path d=\\"M1 12.087a5.762 5.762 0 0 0 4.252-1.19 2.874 2.874 0 0 1-2.683-1.995c.176.034.356.052.541.052.262 0 .606-.035.847-.101-1.314-.264-2.214-1.424-2.214-2.816 0 .179.74.308 1.211.323-.771-.515-1.323-1.394-1.323-2.391 0-.526.119-1.02.366-1.444a8.128 8.128 0 0 0 5.909 3.001 2.877 2.877 0 0 1-.08-.654 2.87 2.87 0 0 1 4.965-1.965 5.735 5.735 0 0 0 1.823-.698 2.886 2.886 0 0 1-1.263 1.59A5.739 5.739 0 0 0 15 3.346a5.84 5.84 0 0 1-1.433 1.487c.006.123.008.247.008.372 0 3.795-2.889 8.172-8.172 8.172A8.138 8.138 0 0 1 1 12.087z\\" fill=\\"currentColor\\" fill-rule=\\"evenodd\\"/>",
        }
      }
      style={
        Object {
          "height": "2rem",
          "width": "2rem",
        }
      }
      viewBox="0 0 16 16"
    />
  </div>
</div>
`;
